Hyperlinks to the documentation and the releases on GitHub added to the footer.

--- a/template/admin/rsrc/main.css
+++ b/template/admin/rsrc/main.css
@@ -61,7 +61,12 @@ body{font-family:Ruda,sans-serif;font-size:0.7rem;line-height:1.2rem;}
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 /* Footer
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-#main-footer{font-size:0.6rem;background:#EEE;border-top:0.05rem solid #AAA;padding:0.75rem;text-align:center;}
+#main-footer{font-size:0.6rem;background:#EEE;border-top:0.05rem solid #AAA;padding:0.5rem 0.75rem;text-align:center;}
+#main-footer > ul{margin:0;padding:0;list-style:none;}
+#main-footer > ul > li{display:inline;}
+#main-footer > ul > li + li{}
+#main-footer > ul > li:before{content:"[";font-weight:700;margin-right:0.1rem;}
+#main-footer > ul > li:after{content:"]";font-weight:700;margin-left:0.1rem;}
 
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 /* Main Navigation
@@ -214,6 +219,7 @@ label:after{content:":";}
 .fa-user:before{content:"\f007"}
 .fa-home:before{content:"\f015"}
 .fa-plus:before{content:"\f067"}
+.fa-book:before{content:"\f02d"}
 .fa-italic:before{content:"\f033"}
 .fa-header:before{content:"\f1dc"}
 .fa-search:before{content:"\f002"}
@@ -237,6 +243,7 @@ label:after{content:":";}
 .fa-newspaper-o:before{content:"\f1ea"}
 .fa-arrow-right:before{content:"\f061"}
 .fa-external-link:before{content:"\f08e"}
+.fa-github-square:before{content:"\f092"}
 .fa-pencil-square-o:before{content:"\f044"}
 .fa-question-circle:before{content:"\f059"}
 .fa-pencil-square-o:before{content:"\f044"}
