--- a/template/standard/rsrc/main.css
+++ b/template/standard/rsrc/main.css
@@ -100,9 +100,9 @@ a.brackets:before,a.brackets:after{color:#222;}
 /* Item List <li>
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 .item-list-li{background:#EEE;border:0.05rem solid #AAA;overflow:hidden;margin:0.5rem 0;}
-.item-list-li > header{padding:0.25rem 1rem;border-bottom:0.05rem solid #AAA;overflow:hidden;}
-.item-list-li > header h2{border:none !important;font-size:inherit;text-transform:uppercase;}
-.item-list-li > header h2 .info{float:right;font-size:0.7rem;font-weight:400;}
+.item-list-li > header{padding:0.25rem 1rem;border-bottom:0.05rem solid #AAA;overflow:hidden;text-transform:uppercase;}
+.item-list-li > header h2{font-size:0.65rem;float:left;}
+.item-list-li > header .info{float:right;font-size:0.6rem;font-weight:400;}
 .item-list-li > header a{color:inherit;}
 .item-list-li > blockquote{margin:0;padding:0 1rem;font-family:inherit;}
 .item-list-li > blockquote img{display:block;}
@@ -159,13 +159,13 @@ thead > tr > td, th > td{text-align:center;}
 	#main-navi > ul{display:none;float:none;}
 	#main-navi > ul > li a{display:block;text-align:left;padding:0 0.25rem;}
 	#main-navi{overflow:hidden;}
-	h2{border-bottom:0.05rem solid #888;}
 	#toogle-nav-label{display:block;}
 	#toogle-nav:checked + ul{display:block;}
 	#main-navi li:last-child{float:none;}
 
-	.item-list-li > header > h2{text-align:center;}
-	.item-list-li > header > h2 > .info{float:none;display:block;}
+	.item-list-li > header{text-align:center;}
+	.item-list-li > header > h2,
+	.item-list-li > header > .info{float:none;display:block;}
 }
 
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
