An invisible text has been added to each action icon in the item list of the admin template so that users who do not have CSS enabled or using a web browser such as "Lynx" are able to understand and click the links (instead of seeing an empty and unclickable list item with no further information).

--- a/template/admin/rsrc/main.css
+++ b/template/admin/rsrc/main.css
@@ -106,6 +106,7 @@ img{border:none;max-width:100%;}
 .blue{color:#40779A;}
 .green{color:#008B45;}
 .right{float:right;}
+.hidden{display:none;}
 #database-result{color:inherit;}
 
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
@@ -185,7 +186,6 @@ form{border:0.05rem solid #AAA;}
 .button-list.markdown > li:active{color:#40779A;}
 
 #content-editor{border:none;margin:0;}
-
 
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 /* Form elements
