The original font "Font Awesome" has been replaced by a minimized version from Fontello.com, which contains only the absolutely necessary icons. This reduces the size of the font file to download to approximately 70 kilobytes. This is beneficial for smartphone users who have an extremely throttled data connection (for example, 32 KBit/s – yes, no joke!), which is not unusual in Germany where mobile internet is still expensive. On the other hand, it is always a good idea to load only what is really necessary. And why always (with cold browser cache) download unnecessary 70 kilobytes, when it is not necessary?

--- a/template/admin/rsrc/main.css
+++ b/template/admin/rsrc/main.css
@@ -219,7 +219,7 @@ label:after{content:":";}
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 /* FontAwesome Main
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-.fa{display:inline-block;font:normal normal normal 14px/1 "FontAwesome";font-size:inherit;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
+.fa{font:normal normal normal 14px/1 FontAwesome;font-size:inherit;speak:none;display:inline-block;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
 
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 /* FontAwesome Icons
@@ -279,9 +279,9 @@ label:after{content:":";}
 }
 
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-/* Font "Font Awesome" [4.7.0]: SIL Open Font License (OFL)
+/* Font "Font Awesome" [4.7.0] (by Fontello): SIL Open Font License (OFL)
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-@font-face{font-family:"FontAwesome";font-weight:400;src:url("font/font-awesome.woff2") format("woff2");}
+@font-face{font-family:FontAwesome;font-weight:400;src:url("font/font-awesome-fontello.woff2") format("woff2");}
 
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 /* Font "Kadwa": SIL Open Font License (OFL)
