A new Font Awesome icon was added to the admin template. This icon is used later for the coming search function in the administration area.

--- a/template/admin/rsrc/main.css
+++ b/template/admin/rsrc/main.css
@@ -233,6 +233,7 @@ label:after{content:":";}
 .fa-book:before{content:"\f02d"}
 .fa-italic:before{content:"\f033"}
 .fa-header:before{content:"\f1dc"}
+.fa-search:before{content:"\f002"}
 .fa-trash-o:before{content:"\f014"}
 .fa-sign-in:before{content:"\f090"}
 .fa-clock-o:before{content:"\f017"}
