--- a/template/admin/rsrc/main.css
+++ b/template/admin/rsrc/main.css
@@ -31,7 +31,7 @@ h5{font-size:0.55rem;}h6{font-size:0.50rem;}
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 html,body{margin:0;padding:0;}
 main{padding:0.75rem;}
-html{font-size:1.25rem;color:#333;background:url("background.png") fixed center #CCC;-webkit-hyphens:auto;hyphens:auto;}
+html{font-size:1.25rem;color:#333;background:#CCC;-webkit-hyphens:auto;hyphens:auto;}
 body{font-family:Ruda,sans-serif;font-size:0.7rem;line-height:1.2rem;}
 
 /*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
