--- a/template/standard/rsrc/main.css
+++ b/template/standard/rsrc/main.css
@@ -1,24 +1,24 @@
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-/* Hyperlinks
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+# Hyperlinks
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 a{color:#0060A0;text-decoration:none;}a:focus{background:#CCC;}
 
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-/* Paragraphs
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+# Paragraphs
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 h1+p,h2+p,h3+p,h4+p,h5+p,h6+p{margin-top:0;}
 
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-/* Headings
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+# Headings
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 h1,h2,h3,h4,h5,h6{margin:0;font-weight:600;}
 h1{font-size:0.80rem;}h2{font-size:0.70rem;}
 h3{font-size:0.65rem;}h4{font-size:0.60rem;}
 h5{font-size:0.55rem;}h6{font-size:0.50rem;}
 
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-/* Document
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+# Document
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 html,body{margin:0;padding:0;}
 html{font-size:1.25rem;color:#333;background:#CCC;-webkit-hyphens:auto;hyphens:auto;}
 body{font-family:Ruda,sans-serif;font-size:0.7rem;line-height:1.2rem;}
@@ -27,20 +27,20 @@ body{font-family:Ruda,sans-serif;font-size:0.7rem;line-height:1.2rem;}
 
 main,#main-header > div{padding:1rem;box-sizing:border-box;}
 
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-/* Header
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+# Header
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 #main-header > div{overflow:hidden;}
 #main-logo{height:1.75rem;display:block;}
 
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-/* Footer
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+# Footer
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 #main-footer{background:#EEE;border-top:0.05rem solid #AAA;padding:0.25rem 1rem;text-align:center;font-size:0.6rem;}
 
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-/* Main Navigation
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+# Main Navigation
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 #main-navi{font-size:0.6rem;background:#EEE;border:0.05rem solid #AAA;border-left:none;border-right:none;padding:0 1rem;}
 #main-navi ul{list-style:none;margin:0;padding:0;}
 #main-navi li{display:inline;}
@@ -49,9 +49,9 @@ main,#main-header > div{padding:1rem;box-sizing:border-box;}
 #main-navi a:hover, #main-navi a:focus{text-decoration:none;background:#DDD;border:0.05rem solid #AAA;border-top:none;border-bottom:none;}
 #main-navi li:last-child{float:right;}
 
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-/* Site Navigation
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+# Site Navigation
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 #site-navi{clear:both;display:flex;box-sizing:border-box;justify-content:space-between;}
 #site-navi > div{display:flex;align-items:center;border:0.05rem solid #AAA;background:#EEE;}
 #site-navi > div > a{display:block;}
@@ -67,9 +67,9 @@ main,#main-header > div{padding:1rem;box-sizing:border-box;}
 #site-navi a{padding:0 0.5rem;text-decoration:none;color:inherit;display:inline-block;}
 #site-navi a:hover,#site-navi a:focus{background:#CCC;}
 
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-/* Elements
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+# Elements
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 pre{font-family:monospace;margin-bottom:1rem;overflow:auto;-moz-tab-size:4;tab-size:4;}
 code,pre{font-family:monospace;color:#008B45;}
 strong,label{font-weight:600;}
@@ -80,17 +80,17 @@ table img{border:none;border-radius:0;}
 .head-link{font-size:0.6rem;float:right;}
 .head-link .fa{margin-right:0.125rem;}
 
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-/* Brackets
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+# Brackets
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 .brackets a,a.brackets{text-decoration:none;}
 .brackets:after{content:"]"}
 .brackets:before{content:"["}
 a.brackets:before,a.brackets:after{color:#222;}
 
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-/* Item Element
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+# Item Element
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 .item{background:#EEE;border:0.05rem solid #AAA;overflow:hidden;margin:0.5rem 0;}
 .item > header{padding:0.25rem 1rem;border-bottom:0.05rem solid #AAA;overflow:hidden;text-transform:uppercase;}
 .item > header h2{font-size:0.65rem;float:left;}
@@ -99,47 +99,47 @@ a.brackets:before,a.brackets:after{color:#222;}
 .item > blockquote{margin:0;padding:0 1rem;font-family:inherit;}
 .item > blockquote img{display:block;}
 
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-/* Item content on main sites
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+# Item content on main sites
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 #content{background:#EEE;border:0.05rem solid #AAA;margin:0.5rem 0;padding:0 1rem;}
 #content img{display:block;}
 #content.page{} /* different rules for page item */
 #content.post{} /* different rules for page item */
 #content.user{} /* different rules for page item */
 
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-/* Responsive
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+# Responsive
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 #toogle-nav{display:none;clear:both;}
 #toogle-nav-label{display:none;cursor:pointer;font-size:1.25rem;text-align:center;}
 
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-/* Form elements
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+# Form elements
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 input,select{background:#EEE;color:inherit;padding:0.2rem;border:0.1rem solid #AAA;}
 
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-/* Table elements
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+# Table elements
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 table{width:100%;margin:0 0 1rem;}td{vertical-align:middle;}
 table,td{border-spacing:0;border-collapse:collapse;padding:0.5rem;border:0.05rem solid #000;}
 thead,tr:nth-child(even){background:#EEE;}
 thead > tr, th{font-weight:600;font-style:italic;}
 thead > tr > td, th > td{text-align:center;}
 
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-/* Responsive Level #1
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+# Responsive Level #1
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 @media only screen and (max-width:50em) {
 	html{font-size:1.125rem;/*18px*/background-image:none !important;}
 	body{line-height:1.2rem;}
 	#container{margin:0;border-right:none;border-left:none;}
 }
 
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-/* Responsive Level #2
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+# Responsive Level #2
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 @media only screen and (max-width:37.5em) {
 	main,#main-header > div{padding:1rem;}
 	#main-navi{padding:0.25rem 1rem;}
@@ -157,14 +157,14 @@ thead > tr > td, th > td{text-align:center;}
 	.item > header > .info{float:none;display:block;}
 }
 
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-/* FontAwesome Main
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+# FontAwesome Main
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 .fa{display:inline-block;font:normal normal normal 14px/1 "FontAwesome";font-size:inherit;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
 
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-/* FontAwesome Icons
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+# FontAwesome Icons
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 .fa-rss:before{content:"\f09e"}
 .fa-key:before{content:"\f084"}
 .fa-bars:before{content:"\f0c9"}
@@ -179,13 +179,13 @@ thead > tr > td, th > td{text-align:center;}
 .fa-arrow-right:before{content:"\f061"}
 .fa-exclamation-triangle:before{content:"\f071"}
 
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-/* Font "Font Awesome" [4.7.0]: SIL Open Font License (OFL)
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+# Font "Font Awesome" [4.7.0]: SIL Open Font License (OFL)
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 @font-face{font-family:"FontAwesome";font-weight:400;src:url("font/font-awesome.woff2") format("woff2");}
 
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
-/* Font "Ruda": SIL Open Font License (OFL)
-/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+/*++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+# Font "Ruda": SIL Open Font License (OFL)
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 @font-face{font-family:Ruda;font-weight:400;src:url("font/ruda-n-400.woff2") format("woff2");}
 @font-face{font-family:Ruda;font-weight:700;src:url("font/ruda-n-700.woff2") format("woff2");}
